...
                UniTTIconButton(
                    icon = Icons.Outlined.ArrowBackIosNew,
                    contentDescription = "뒤로가기",
                    onClick = onBack,
                    modifier = Modifier
                        .size(UniTTTheme.sizes.touchMinimum),
                    testTag = "top-back-button",
                )
            }
            Text(
                title,
                modifier = Modifier.weight(1f),
                style = UniTTTheme.typography.heading3,
...
